unpackaged/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivery_Options__c</fullName>
        <label>Delivery Options</label>
        <picklist>
            <picklistValues>
                <fullName>Same Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Business Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Business Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Business Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <summarizedField>Order_Line_Item__c.Total__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Training_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Amends the purchase order with terms of training.</inlineHelpText>
        <label>Training Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Adds text to the purchase order contract related to warranty conditions.</inlineHelpText>
        <label>Warranty Included</label>
        <type>Checkbox</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Order ID-{00000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>